[package]
name = "yosoku"
description = "Minimalistic and cross-platform weather application for your terminal."
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.2.2"
home = "0.5.4"
reqwest = { version = "0.11.16", features = ["blocking"] }
serde = { version = "1.0.160", features = ["derive"] }
toml = "0.7.3"
